# qt-box-editor

./: CMakeLists.txt
dialogs/: DrawRectangle.cpp  FindDialog.cpp  GetRowIDDialog.cpp  SettingsDialog.cpp  SettingsDialog.h  ShortCutsDialog.cpp
src/: ChildWidget.cpp  MainWindow.cpp  MainWindow.h  Settings.h  TessTools.cpp
